@@ -1,2 +1,15 @@
-Thomas Perl <thp@perli.net>
-Peter Hoffmann <tosh@cs.tu-berlin.de>
+gPodder team, as seen on developer.berlios.de:
+
+  Thomas Perl <thp@perli.net>
+  Peter Hoffmann <tosh@cs.tu-berlin.de>
+  Adrien Beaucreux <informancer@web.de>
+
+
+Thanks to all the other patch writers:
+
+  Joseph Bleau <jbleau@gmail.com> (dialogs)
+  Thomas Mills Hinkle <tmhinkle@gmail.com> (mnemonics gladefile)
+  Alain Tauch <contrib@maisondubonheur.com> (lots of patches [see ChangeLog])
+  Stylianos Papanastasiou <stelios@dcs.gla.ac.uk> (patch for "downloaded move")
+
+(..and all the others I forgot.. sorry :)
