@@ -1,14 +1,5 @@
 
-  == 0.6 release-critical ==
- 
- huh - none??
-
- * FIXBUG: When adding achannel if the url is wrong, like:
-   example.com/feed.xxml
-   gpodder will create a duplicate channel in the pulldown area.
-                                  (reported by plwoodward@charter.net)
-
-  == 0.6 or afterwards ==
+  == 0.7 or afterwards ==
  
  * viewing pod info such as pubdate/description
    would've been nice.. It would give a better over view on your
@@ -27,9 +18,6 @@
  * maybe mark "currently downloading" episodes
    with different color (+ live update)
    
- * check if threads deleted from download status
-   list make the gui freeze and why and FIX ;)
-
  * (properties: set http proxy)          <--- done
    ---> or use gnome's proxy setting     <--- not done
    (suggested by alabrosse.ext@rd.francetelecom.fr)
