@@ -7,7 +7,7 @@
 
 __author__    = "Thomas Perl <thp@perli.net>"
 __version__   = "0.6-svn"
-__date__      = "2006-02-26"
+__date__      = "2006-03-29"
 __copyright__ = "Copyright (c) 2005-2006 %s. All rights reserved." % __author__
 __licence__   = "GPL"
 
