@@ -3,6 +3,7 @@ Wed, 29 Mar 2006 13:29:51 +0200 <thp@perli.net>
 	* localDB is now caching data read from localDB XML files
 	* localDB cache is cleared when a download is completed
 	* Applied patch from Alain Tauch (bad URL "Add channel.." fix)
+	* Updated AUTHORS, TODO, contributors list, pushed version date
 
 Tue, 28 Mar 2006 20:30:00 +0200 <thp@perli.net>
 	* Disable some menu items when not on "available" tab
